--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
         </section>
         <section>
             <article class="main-conteneur">
+                <h6 class="green droite">QUI SOMMES-<span class="green">NOUS</span></h6>
                 <div>
                     <div class="conteneur-img img1">
 
                     </div>
                     <div class="text">
-                        <h6 class="green droite">QUI SOMMES-<span class="green">NOUS</span></h6>
+                       
                         <div>
                             <p>
                                 Vous êtes à la recherche du lieu de repos idéal, où vous pourrez
@@ -168,16 +169,16 @@
 
             </article>
             <article class="main-conteneur">
+                <h6 class="beige droite">PLANIFIEZ <span class="beige">VOTRE</span> <br> VOYAGE</h6>
                 <div>
                     <div class="conteneur-img img3">
 
                     </div>
                     <div class="text">
-                        <h6 class="beige droite">PLANIFIEZ <span class="beige">VOTRE</span> <br> VOYAGE</h6>
+                       
                         <div>
                             <p>
                                 Cette partie du site est à venir ! <br>
-
                                 Pour patienter, n’hésitez pas à vous inscrire à notre
                                 newsletter, afin d’être au courant de l’avancée des projets,
                                 ainsi que des nouveautés !
@@ -243,6 +244,27 @@
             </div>
         </div>
     </footer>
+        <script type='text/javascript'
+            src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+        <script type='text/javascript'>
+            (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+            }(jQuery));
+            var $mcj = jQuery.noConflict(true);
+        </script>
         <script type="module"
             src="./scripts/main.js"></script>
         <script type="module"
