--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <ul class="navbar">
                 <li class="close-navbar"><img src="/images/closeburger.svg" alt="closeNavbar"></li>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="#">Qui sommes-nous ?</a></li>
-                <li><a href="#">Newsletter</a></li>
+                <li><a href="#qui">Qui sommes-nous ?</a></li>
+                <li><a href="#voyage">Newsletter</a></li>
                 <li><a class="btn" href="#">Se connecter</a></li>
             </ul>
             <div class="burger">
@@ -114,14 +114,13 @@
             </article>
         </section>
         <section>
-            <article class="main-conteneur">
-                <h6 class="green droite">QUI SOMMES-<span class="green">NOUS</span></h6>
+            <!-- Qui sommes-nous -->
+            <article id="qui" class="main-conteneur">
+                <h6 class="green left">QUI SOMMES-<span>NOUS</span></h6>
                 <div>
                     <div class="conteneur-img img1">
-
                     </div>
                     <div class="text">
-                       
                         <div>
                             <p>
                                 Vous êtes à la recherche du lieu de repos idéal, où vous pourrez
@@ -142,10 +141,12 @@
                 </div>
 
             </article>
-            <article class="main-conteneur">
+            <!-- Vous accompagner -->
+            <article id="accompagnement" class="main-conteneur">
+                <h6 class="blue right"><span>VOUS </span >ACCOMPAGNER</h6>
                 <div>
+                    <div class="conteneur-img img2"></div>
                     <div class="text">
-                        <h6 class="blue gauche"><span class="blue" >VOUS </span >ACCOMPAGNER</h6>
                         <div>
                             <p>
                                 Que vous recherchiez la superbe villa d’un architecte de renom,
@@ -162,20 +163,15 @@
                             </p>
                         </div>
                     </div>
-                    <div class="conteneur-img img2">
-
-                    </div>
                 </div>
 
             </article>
-            <article class="main-conteneur">
-                <h6 class="beige droite">PLANIFIEZ <span class="beige">VOTRE</span> <br> VOYAGE</h6>
+            <!-- planifier votre voyages  -->
+            <article id="voyage" class="main-conteneur">
+                <h6 class="beige left">PLANIFIEZ <span>VOTRE</span> <br> VOYAGE</h6>
                 <div>
-                    <div class="conteneur-img img3">
-
-                    </div>
+                    <div class="conteneur-img img3"></div>
                     <div class="text">
-                       
                         <div>
                             <p>
                                 Cette partie du site est à venir ! <br>
@@ -226,15 +222,15 @@
     <footer>
         <div>
             <ul>
-                <li><a href="">Accueil</a></li>
-                <li><a href="">Qui sommes-nous ?</a> </li>
-                <li><a href="">Newsletter</a> </li>
-                <li><a href="">Compte</a> </li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#qui">Qui sommes-nous ?</a> </li>
+                <li><a href="#voyage">Newsletter</a> </li>
+                <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a href="">Instagram</a> </li>
-                <li><a href="">Instagram</a> </li>
-                <li><a href="">Instagram</a> </li>
+                <li><a href=""><img src="#" alt="Instagram"></a> </li>
+                <li><a href="https://www.twitch.tv/escapee_travel"><img src="#" alt="Twitch"></a> </li>
+                <li><a href=""><img src="#" alt="Paanteon"></a> </li>
             </ul>
             <div>
                 <p>© Copyright 2022</p>
