--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -52,8 +52,39 @@
             style="display:none;visibility:hidden">
         </iframe>
     </noscript>
-
+    <header>
+        <div class="logo">
+            <img src="./images/logo.svg" alt="Logo Escapee" />
+        </div>
+        <ul class="navbar">
+            <li class="close-navbar"><img src="/images/closeburger.svg" alt="closeNavbar"></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="index.html/#qui">Qui sommes-nous ?</a></li>
+            <li><a href="index.html/#voyage">Newsletter</a></li>
+            <li><a class="btn" href="#">Se connecter</a></li>
+        </ul>
+        <div class="burger">
+            <img class="open-navbar" src="/images/menubuger.svg" alt="burger menu">
+        </div>
+    </header>
     <main>
+        <section class="background">
+            <article>
+                <div class="title-header privacy-policy">
+                    <div>
+                        <h1>Mentions légales</h1>
+                    </div>
+                    <div>
+                        <h2>Politique de confidentialité</h2>
+                    </div>
+                </div>
+                <div class="mouse">
+                    <div class="mouse-shape">
+                        <div class="mouse-animation"></div>
+                    </div>
+                    </div>  
+            </article>
+        </section>  
        <section class="mention-legal">
         <h2> Mentions Légales </h2>
         <h3> Éditions </h3>
@@ -126,6 +157,27 @@
         <p> Vous pouvez choisir de désactiver les cookies entièrement dans votre navigateur Internet, mais cela peut nuire à votre expérience utilisateur.</p>
        </section>
     </main>
+    <footer>
+        <div>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html/#qui">Qui sommes-nous ?</a> </li>
+                <li><a href="index.html/#voyage">Newsletter</a> </li>
+                <li><a href="index.html/#">Compte</a> </li>
+            </ul>
+            <ul>
+                <li><a href=""><img src="#" alt="Instagram"></a> </li>
+                <li><a href="https://www.twitch.tv/escapee_travel"><img src="#" alt="Twitch"></a> </li>
+                <li><a href=""><img src="#" alt="Paanteon"></a> </li>
+            </ul>
+            <div>
+                <p>© Copyright 2022</p>
+                <p>
+                    <a href="#">Mention légale, Politique de confidentialité</a>
+                </p>
+            </div>
+        </div>
+    </footer>
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
 </body>
