--- a/index.html
+++ b/index.html
@@ -275,6 +275,18 @@
 
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
+    <script>
+        window.axeptioSettings = {
+          clientId: "62b8c0847c591dfcedcecac0",
+          cookiesVersion: "escapee-fr",
+        };
+         
+        (function(d, s) {
+          var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
+          e.async = true; e.src = "//static.axept.io/sdk.js";
+          t.parentNode.insertBefore(e, t);
+        })(document, "script");
+        </script>
 </body>
 
 </html>
