--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
                 <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a href=""><img src="#" alt="Instagram"></a> </li>
-                <li><a href="https://www.twitch.tv/escapee_travel"><img src="#" alt="Twitch"></a> </li>
-                <li><a href=""><img src="#" alt="Paanteon"></a> </li>
+                <li><a href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg" alt="Instagram"></a> </li>
+                <li><a href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg" alt="Twitch"></a> </li>
+                <li><a href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
             </ul>
             <div>
                 <p>© Copyright 2022</p>
                 <p>
-                    <a href="privacy-policy.html">Mention légale, Politique de confidentialité</a>
+                    <a href="privacy-policy.html">Mentions légales, Politique de confidentialité</a>
                 </p>
             </div>
         </div>
