--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -166,14 +166,14 @@
                 <li><a href="index.html/#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a href=""><img src="#" alt="Instagram"></a> </li>
-                <li><a href="https://www.twitch.tv/escapee_travel"><img src="#" alt="Twitch"></a> </li>
-                <li><a href=""><img src="#" alt="Paanteon"></a> </li>
+                <li><a href=""><img src="./images/insta.svg" alt="Instagram"></a> </li>
+                <li><a href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg" alt="Twitch"></a> </li>
+                <li><a href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
             </ul>
             <div>
                 <p>© Copyright 2022</p>
                 <p>
-                    <a href="#">Mention légale, Politique de confidentialité</a>
+                    <a href="#">Mentions légales, Politique de confidentialité</a>
                 </p>
             </div>
         </div>
@@ -181,7 +181,7 @@
     <script type="module" src="./scripts/main.js"></script>
     <script type="module" src="./scripts/home.js"></script>
     <script>
-        window.axeptioSettings = {
+        window.axeptioSettings = {
           clientId: "62b8c0847c591dfcedcecac0",
           cookiesVersion: "escapee-fr",
         };
