Ajout favicon.ico

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,12 +39,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Cactus et vous" />
 
-    <link rel="icon" type="image/png" href="./public/icon.png" />
-    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="./public/touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./public/touch-icon-iphone-retina.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="./public/touch-icon-ipad-retina.png" />
-    <title>Escapee</title>
+    <link rel="icon" type="image/png" href="./public/icon-16x16.png" />
+    <link rel="icon" type="image/png" href="./public/icon-32x32.png" />
+    <link rel="icon" type="image/png" href="./public/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" href="./public/android-chrome-512x512.png" />
+    <link rel="icon" type="image/png" href="./public/favicon.ico" />
+    <link rel="icon" type="image/png" href="./public/apple-touch-icon.png" />
+    <title>Escapee - Privacy policy</title>
 </head>
 <body>
     <noscript>
